fix: RSS-TD-05 change landing page code editor on tablet size disappear (#34)
- Add media query that includes code editor disappearing on tablet and mobile size
- Add util to code-snippets.

--- a/src/pages/landing-page/components/ui/landing-code-editor/landing-code-editor.module.scss
+++ b/src/pages/landing-page/components/ui/landing-code-editor/landing-code-editor.module.scss
@@ -15,6 +15,10 @@
   }
 
   @include media-desktop-small {
+    max-width: 100%;
+  }
+
+  @include media-tablet {
     display: none;
   }
 
