--- a/src/pages/landing-page/landing-page.module.scss
+++ b/src/pages/landing-page/landing-page.module.scss
@@ -19,7 +19,9 @@
 
   @include media-desktop-small {
     padding-bottom: 20px;
-    align-items: center;
+    align-items: start;
+    width: 100%;
+    flex-direction: column-reverse;
   }
 }
 
